[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/map/map_generator.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://script/map/map editor.gd" type="Script" id=3]
[ext_resource path="res://asset/gambar/modul/modul_sendi.webp" type="Texture" id=4]
[ext_resource path="res://asset/gambar/modul/modul_dasar.webp" type="Texture" id=5]
[ext_resource path="res://script/map/tombol.gd" type="Script" id=6]
[ext_resource path="res://script/map/Camera_editor.gd" type="Script" id=7]

[node name="map editor" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="map_generator" parent="." instance=ExtResource( 1 )]
mode_edit = true

[node name="HFlowContainer" type="HFlowContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -144.0

[node name="dasar" type="Button" parent="HFlowContainer"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 5 )
script = ExtResource( 6 )
node_modul = 2

[node name="sendi" type="Button" parent="HFlowContainer"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 70.0
icon = ExtResource( 4 )

[node name="ruang makan" type="Button" parent="HFlowContainer"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="ruang tidur" type="Button" parent="HFlowContainer"]
margin_left = 240.0
margin_right = 316.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="ruang latihan" type="Button" parent="HFlowContainer"]
margin_left = 320.0
margin_right = 396.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="ruang mandi" type="Button" parent="HFlowContainer"]
margin_left = 400.0
margin_right = 476.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="gudang" type="Button" parent="HFlowContainer"]
margin_left = 480.0
margin_right = 556.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="droppod" type="Button" parent="HFlowContainer"]
margin_left = 560.0
margin_right = 636.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="airlock" type="Button" parent="HFlowContainer"]
margin_left = 640.0
margin_right = 716.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="dermaga" type="Button" parent="HFlowContainer"]
margin_left = 720.0
margin_right = 796.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="frigget" type="Button" parent="HFlowContainer"]
margin_left = 800.0
margin_right = 876.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="sentri" type="Button" parent="HFlowContainer"]
margin_left = 880.0
margin_right = 956.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="spowning" type="Button" parent="HFlowContainer"]
margin_top = 74.0
margin_right = 76.0
margin_bottom = 144.0
icon = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "debug
"

[node name="OptionButton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -14.0
margin_right = 30.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionButton"]
margin_top = 19.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="OptionButton/HBoxContainer"]
margin_right = 59.0
margin_bottom = 21.0
text = "simpan"

[node name="Button2" type="Button" parent="OptionButton/HBoxContainer"]
margin_left = 63.0
margin_right = 113.0
margin_bottom = 21.0
text = "hapus"

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial"]
script = ExtResource( 7 )

[connection signal="input_event" from="map_generator/box" to="map_generator/box" method="_on_box_input_event"]
[connection signal="input_event" from="map_generator/box2" to="map_generator/box2" method="_on_box_input_event"]
[connection signal="input_event" from="map_generator/box3" to="map_generator/box3" method="_on_box_input_event"]
[connection signal="input_event" from="map_generator/box4" to="map_generator/box4" method="_on_box_input_event"]
[connection signal="input_event" from="map_generator/box5" to="map_generator/box5" method="_on_box_input_event"]
[connection signal="input_event" from="map_generator/box6" to="map_generator/box6" method="_on_box_input_event"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
